Bug 180058 - msn connection hangs but stay alive-looking
Summary: msn connection hangs but stay alive-looking
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: WLM Plugin (other bugs)
Version First Reported In: 0.60.81
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 170849 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-08 20:57 UTC by Mathieu Jobin
Modified: 2009-05-31 11:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mathieu Jobin 2009-01-08 20:57:27 UTC
Version:           0.60.81 (using 4.1.85 (KDE 4.1.85 (KDE 4.2 Beta2)), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.27-9-generic

sometimes I want to send a msg to a contact, but it won't send.
it will just timeout after long minutes saying the contact could not be reach.

then my other co-working is asking me: "aren't you not online?"

kopete looks online, my contact list is all online looking. but people see my as offline and I can't send messages.

I need to disconnect and reconnect.
Comment 1 Marco Pizzichemi 2009-01-27 12:10:09 UTC
(In reply to comment #0)
> Version:           0.60.81 (using 4.1.85 (KDE 4.1.85 (KDE 4.2 Beta2)), Kubuntu
> packages)
> Compiler:          cc
> OS:                Linux (i686) release 2.6.27-9-generic
> 
> sometimes I want to send a msg to a contact, but it won't send.
> it will just timeout after long minutes saying the contact could not be reach.
> 
> then my other co-working is asking me: "aren't you not online?"
> 
> kopete looks online, my contact list is all online looking. but people see my
> as offline and I can't send messages.
> 
> I need to disconnect and reconnect.
> 

I can confirm, same behaviour as the one described. I'm using kubuntu kde 4.2 rc1, kopete 0.60.82, Linux 2.6.27-11-generic. Kopete goes offline often while still appearing online. Sometimes, instead, while you are still online and chatting to someone, you appear offline to other users.
Comment 2 decept0 2009-03-21 13:00:35 UTC
I can confirm this also. Using kopete 0.70.0 with libmsn 4.0-beta4 under FreeBSD
Comment 3 Jan Drewes 2009-03-25 16:35:50 UTC
I can confirm this, using ubuntu/kubuntu 8.10 with all updates from backports and proposed, using Kopete Version 0.70.0 with KDE 4.2.00 (KDE 4.2.0).
Comment 4 kirun 2009-04-12 17:58:29 UTC
*** This bug has been confirmed by popular vote. ***
Comment 5 Roman Jarosz 2009-05-20 22:29:03 UTC
SVN commit 970799 by rjarosz:

Add SocketTimoutWather to wlm and also implement error detection.
We still need some ping packet to be sent otherwise the timeout
will only be detected when user interacts with wlm.

CCBUG: 180058


 M  +17 -1     libkopete/kopetesockettimeoutwatcher.cpp  
 M  +7 -1      libkopete/kopetesockettimeoutwatcher.h  
 M  +7 -2      protocols/oscar/oscaraccount.cpp  
 M  +25 -15    protocols/wlm/wlmaccount.cpp  
 M  +16 -9     protocols/wlm/wlmaccount.h  
 M  +13 -2     protocols/wlm/wlmlibmsn.cpp  
 M  +5 -0      protocols/wlm/wlmlibmsn.h  
 M  +14 -10    protocols/wlm/wlmserver.h  
 M  +2 -1      protocols/wlm/wlmsocket.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=970799
Comment 6 Roman Jarosz 2009-05-20 23:25:24 UTC
SVN commit 970816 by rjarosz:

Send keep alive packet so we know when we aren't connected anymore.
Dropped connection will be detected at most in 65 seconds (on Linux).

BUG: 180058



 M  +66 -37    wlmsocket.cpp  
 M  +19 -11    wlmsocket.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=970816
Comment 7 Roman Jarosz 2009-05-24 16:47:16 UTC
SVN commit 972308 by rjarosz:

If we get socket error for not main connection just close that connection and not all connections.

CCBUG: 180058
CCBUG: 178053


 M  +14 -6     wlmlibmsn.cpp  
 M  +6 -0      wlmsocket.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=972308
Comment 8 Roman Jarosz 2009-05-28 21:43:06 UTC
SVN commit 974235 by rjarosz:

Backport commits 972308, 970816, 970799 without the SocketTimoutWather.
This will keep wlm connection alive and will catch socket errors and automatically reconnect.

CCBUG: 180058
CCBUG: 178053


 M  +25 -15    wlmaccount.cpp  
 M  +16 -9     wlmaccount.h  
 M  +21 -2     wlmlibmsn.cpp  
 M  +5 -0      wlmlibmsn.h  
 M  +14 -10    wlmserver.h  
 M  +66 -37    wlmsocket.cpp  
 M  +20 -11    wlmsocket.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=974235
Comment 9 Roman Jarosz 2009-05-31 11:17:36 UTC
*** Bug 170849 has been marked as a duplicate of this bug. ***