Send keep alive packet so we know when we aren't connected anymore. Dropped connection will be detected at most in 65 seconds (on Linux).

BUG: 180058


svn path=/trunk/KDE/kdenetwork/kopete/; revision=970816